sumo/tests/od2trips/errors/o/o_false/options.od2trips
-n input_net.net.xml -d input_od_or.fma -o trips.trips.xml
